# Databara

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: check.yml
src/: App.css  App.tsx  EditorTabs.tsx  ResultTable.tsx  Sidebar.css  Sidebar.tsx  TablePreview.tsx  TableSelector.tsx  Workspace.css  Workspace.tsx  main.tsx  types.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/2022-05-22-074720_editor_tab/: down.sql  up.sql
src-tauri/src/: db.rs  error.rs  lib.rs  main.rs  models.rs  schema.rs  session.rs
src-tauri/src/commands/: catalog.rs  mod.rs  preview.rs  seed.rs
src-tauri/src/models/: db_state.rs  editor.rs  mod.rs
