[package]
name = "databara"
version = "0.1.0"
description = "Databara"
authors = ["Jiayu Liu <jiayu@hey.com>"]
license = "Apache License 2.0"
repository = "https://github.com/Databara/Databara"
default-run = "databara"
edition = "2021"
rust-version = "1.57"

[lib]
name = "databara"
path = "src/lib.rs"

[[bin]]
name = "databara"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.9", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.11", features = ["api-all"] }
rusqlite = { version = "0.27.0" }
uuid = { version = "1.0.0", features = ["v4"] }
datafusion = { version = "8.0.0" }
arrow = { version = "14.0.0" }
thiserror = "1.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
